# Graph-Project

./: CMakeLists.txt  README.md  graph
code/: Commify.cpp  Commify.h  Edge.cpp  Edge.h  Graph.cpp  Graph.h  GraphClass.cpp  GraphClass.h  Interface.cpp  Interface.h  Vertice.cpp  Vertice.h  graphClass.cpp  graphClass.h  main.cpp  verticeClass.cpp  verticeClass.h
code/code/: Edge.cpp  graphClass.h  main.cpp
git_Env/: Readme.md
lib/: libsfml-audio.so.3.1  libsfml-audio.so.3.1.0  libsfml-graphics.so.3.1  libsfml-graphics.so.3.1.0  libsfml-network.so.3.1  libsfml-network.so.3.1.0  libsfml-system.so.3.1  libsfml-system.so.3.1.0  libsfml-window.so.3.1  libsfml-window.so.3.1.0
lib/cmake/SFML/: SFMLAudioDependencies.cmake  SFMLGraphicsDependencies.cmake
lib/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
map_folder/: limited_graph_test.txt
